Enable roles in hiera criteria

--- a/files/hiera.yaml
+++ b/files/hiera.yaml
@@ -4,6 +4,7 @@
 :hierarchy:
   - "nodes/%{clientcert}"
   - "tiers/%{application_tier}"
+  - "roles/%{role}"
   - "oses/%{operatingsystem}"
   - common
 
