Breakout common config from nodes to spine roles, etc in hiera

--- a/files/veos2.yaml
+++ b/files/veos2.yaml
@@ -1,9 +1,9 @@
 ---
 classes:
   - eos_config::loopback
-  - eos_config::mlag
-  - eos_config::mlag_portchannel
   - eos_config::switchports
+  #- eos_config::mlag
+  #- eos_config::mlag_downlinks
   #- eos_config::interfaces
   #- eos_config::l3interfaces
   #- eos_config::switchports
@@ -15,23 +15,13 @@ eos_config::vlans::purge: false
 
 eos_config::loopback::address: 1.1.1.2/32
 
-eos_config::mlag::domain_id: SPINE-MLAG
+#eos_config::mlag::domain_id: SPINE-MLAG
+#eos_config::mlag::local_interface: Vlan4094
+#eos_config::mlag::peer_link: Port-Channel100
 eos_config::mlag::members: ['Ethernet3']
-eos_config::mlag::peer_link: Port-Channel100
 eos_config::mlag::peer_address: 172.16.10.1
 eos_config::mlag::local_address: 172.16.10.2/24
-eos_config::mlag::local_interface: Vlan4094
-
-eos_config::mlag_portchannel::mlag: 1
-eos_config::mlag_portchannel::port_channel: Port-Channel1
-eos_config::mlag_portchannel::members: ['Ethernet1']
-
-eos_config::mlag_portchannel::mlag: 2
-eos_config::mlag_portchannel::port_channel: Port-Channel2
-eos_config::mlag_portchannel::members: ['Ethernet2']
-
 
 interfaces:
   Management1: { description: 'enabled by Puppet', enable: true }
   #Ethernet2: { description: 'Shutdown by Puppet', enable: false }
-
