--- a/files/common.yaml
+++ b/files/common.yaml
@@ -2,10 +2,11 @@
 message: "This node is using common data"
 
 classes:
+  - eos_config::ntp
   - eos_config::snmp
   - eos_config::name_servers
 
-ntp::enable: true
+ntp::source_interface: 'Management1'
 ntp::servers:
   - 172.16.130.10
 
